folder_views.xml

--- a/views/menu.xml
+++ b/views/menu.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <menuitem id="menu_pdf_root" name="PDF Processor" sequence="10"/>
-    <menuitem id="menu_pdf_documents" name="Documentos PDF" parent="menu_pdf_root" action="action_pdf_document" sequence="20"/>
+    <record id="menu_pdf_root" model="ir.ui.menu">
+        <field name="name">GestionMineraIA</field>
+        <field name="sequence" eval="10"/>
+    </record>
+
+    <record id="menu_pdf_documents" model="ir.ui.menu">
+        <field name="name">Documentos PDF</field>
+        <field name="parent_id" ref="menu_pdf_root"/>
+        <field name="action" ref="action_pdf_document"/>
+        <field name="sequence" eval="20"/>
+    </record>
 </odoo>
